--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <!doctype html>
+
+
+HEJ HEJ HEJ
+
 <html class="no-js" lang="">
 
 <head>
@@ -55,6 +59,7 @@
     <script src="scripts.js"></script>
     <script>
         <!-- JS on the page -->
+
     </script>
 </body>
 
