--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Afleveringerhejfff</title>
+    <title>Afleveringer</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -58,7 +58,6 @@
     <script src="scripts.js"></script>
     <script>
         <!-- JS on the page -->
-
     </script>
 </body>
 
