HTML på header tilføjet

--- a/materialer.html
+++ b/materialer.html
@@ -9,6 +9,15 @@
 </head>
 
 <body>
+	<div class="topBarFill"></div>
+	<div class="topBar">
+		<a href="menu.html">
+			<div id="hamburger"></div>
+			<div id="searchFunction"></div>
+			<div id="keaLogo"></div>
+		</a>
+	</div>
+
 	<section id="section_materialer">
 		<div class="header_materialer">
 			<h1>Materialer</h1>
