Fixet noget CSS for afleveringer og materialer

--- a/afleveringer.html
+++ b/afleveringer.html
@@ -10,8 +10,8 @@
 
 <body>
 
-	<h1>AFLEVERINGER</h1>
-	<button class="accordion0">Tema 00: Introuge <img src="grafik/pil.svg"></button>
+	<h1>Afleveringer</h1>
+	<button class="accordion0">Tema 00: Introuge</button>
 	<div class="panel0">
 		<p><img src="grafik/box_arrow.svg">
 			Afleveringer</p>
@@ -20,23 +20,23 @@
 	</div>
 
 
-	<button class="accordion0">Tema 01: Grundlæggende webdesign<img src="grafik/pil.svg"></button>
+	<button class="accordion0">Tema 01: Grundlæggende webdesign</button>
 	<div class="panel0">
 		<a href="feedback.html">
 			<p> <img src="grafik/box_arrow.svg">
 				01.01.01 Moodboard
-				<img src="grafik/ic_lock_outline_24px.svg"><img src="grafik/No.svg"><img src="grafik/message.svg">
+				<img src="grafik/ic_lock_outline_24px.svg" class="lock_ikon"><img src="grafik/No.svg" class="cross_ikon"><img src="grafik/message.svg">
 			</p>
 		</a>
 		<p><img src="grafik/box_arrow.svg">
 			01.01.02 Stilartspitch
-			<img src="grafik/ic_lock_outline_24px.svg"><img src="grafik/No.svg"><img src="grafik/message.svg"></p>
+			<img src="grafik/ic_lock_outline_24px.svg" class="lock_ikon"><img src="grafik/No.svg" class="cross_ikon"><img src="grafik/message.svg" class="comment_ikon"></p>
 		<p><img src="grafik/box_arrow.svg">
 			01.01.03 Content til stilartsite
-			<img src="grafik/ic_lock_outline_24px.svg"><img src="grafik/No.svg"><img src="grafik/message.svg"></p>
+			<img src="grafik/ic_lock_outline_24px.svg" class="lock_ikon3"><img src="grafik/No.svg" class="cross_ikon"><img src="grafik/message.svg" class="comment_ikon"></p>
 	</div>
 
-	<button class="accordion0">Tema 02: Grundlæggende indhold<img src="grafik/pil.svg"></button>
+	<button class="accordion0">Tema 02: Grundlæggende indhold</button>
 	<div class="panel0">
 		<p><img src="grafik/box_arrow.svg">
 			02.01 Pilot Projekt</p>
@@ -45,7 +45,7 @@
 	</div>
 
 
-	<button class="accordion0">Tema 03: Grundlæggende animation<img src="grafik/pil.svg"></button>
+	<button class="accordion0">Tema 03: Grundlæggende animation</button>
 	<div class="panel0">
 		<p><img src="grafik/box_arrow.svg">
 			03.01 Koncept og grafik</p>
@@ -57,7 +57,7 @@
 			03.04 Projekt </p>
 	</div>
 
-	<button class="accordion0">Tema 04: Grundlæggende UX<img src="grafik/pil.svg"></button>
+	<button class="accordion0">Tema 04: Grundlæggende UX</button>
 	<div class="panel0">
 		<p><img src="grafik/box_arrow.svg">
 			04.01 User research/p>
